# political_leaning_classifier

./: .gitignore  README.md  app.py  batch_classify.py  classifier.py  evaluate.py  main.py  pyproject.toml  requirements.txt  run.sh
data/: subset_balanced.csv
